# notification-service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py
src/api/: main.py
src/api/v1/routers/: admin.py  notifications.py  subscribers.py
src/api/v1/schemas/: notification.py  subscriber.py
src/api/v1/services/: notification_service.py  subscriber_service.py
src/shared/: database.py  kafka.py  redis.py  settings.py
src/shared/models/: notification.py  subscriber.py
src/shared/repositories/: notification_repository.py  subscriber_contact_repository.py  subscriber_repository.py
src/worker/: main.py  scheduler.py
src/worker/providers/: __init__.py  base.py  email_provider.py  sms_provider.py
tests/: conftest.py
tests/integration/: test_api_subscribers.py  test_worker_flow.py
tests/unit/: test_notification_service.py  test_provider_registry.py
