[project]
name = "notification-service"
version = "0.1.0"
description = "Service for async sending notifications to subscribers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "GoldenTypeAV" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiosmtplib==5.1.1",
    "aiokafka==0.12.0",
    "alembic==1.16.5",
    "asyncpg==0.31.0",
    "fastapi==0.103.1",
    "greenlet==3.5.1",
    "pydantic-settings==2.14.1",
    "redis==5.2.1",
    "sqlalchemy==2.0.50",
    "uvicorn==0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "testcontainers==4.14.2",
    "httpx==0.24.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]